force-app/main/default/objects/Bypass_Trigger_Settings__mdt/Bypass_Trigger_Settings__mdt.object-meta.xml
<CustomObject>
    <description>This metadata setting enables system admin to take control of Triggers and allow user to enable/disable trigger, or even certain events or even a certain functionality.</description>
    <label>Bypass Trigger Settings</label>
    <pluralLabel>Bypass Trigger Settings</pluralLabel>
</CustomObject>