force-app/main/default/objects/Bypass_Trigger_Settings__mdt/fields/Disabled_Events__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Events__c</fullName>
    <description>Provide Event names in a comma separated values, which we want to Disable</description>
    <inlineHelpText>Provide Event names in a comma separated values, which we want to Disable 
Supported values are - 
BEFORE_INSERT, BEFORE_UPDATE, BEFORE_DELETE,AFTER_INSERT, AFTER_UPDATE, AFTER_DELETE, and AFTER_UNDELETE</inlineHelpText>
    <label>Disabled Events</label>
    <type>TextArea</type>
</CustomField>