force-app/main/default/objects/Bypass_Trigger_Settings__mdt/fields/Disabled_Methods__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Methods__c</fullName>
    <description>Provide Method names in a comma separated values, which we want to Disable</description>
    <inlineHelpText>Provide Method names in a comma separated values, which we want to Disable</inlineHelpText>
    <label>Disabled Methods</label>
    <type>TextArea</type>
</CustomField>