force-app/main/default/objects/Bypass_Trigger_Settings__mdt/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Control Switch to Turn Trigger On or Off</description>
    <inlineHelpText>Deselect to switch off the whole Trigger</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>