force-app/main/default/objects/Bypass_Trigger_Settings__mdt/fields/Permission_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Name__c</fullName>
    <label>Permission Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>