force-app/main/default/objects/Bypass_Trigger_Settings__mdt/fields/Trigger_Configurations__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Configurations__c</fullName>
    <label>Trigger Configurations</label>
    <referenceTo>Trigger_Configurations__mdt</referenceTo>
    <relationshipName>Trigger_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>